[package]
name = "cryptgetp"
version = "0.1.0"
edition = "2021"
authors = ["Laurence Sonnenberg <laurence@robothouse.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
tokio = { version = "1.32", features = ["macros", "rt-multi-thread", "rt"] }
reqwest = { version = "0.11.20", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "1.0.48"
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
colored = "2.0.4"

[dev-dependencies]
wiremock = "0.5"
